# videoDetect

./: CMakeLists.txt  README.md
include/: .tags  .tags_sorted_by_file  condition.h  genmd5.h  iudpsocket.h  mutexlock.h  peopledetect.h  res.h
include/config/: config.h
src/: condition.cpp  config.cpp  iudpsocket.cpp  main.cpp  mutexlock.cpp  peopledetect.cpp  res.cpp
