cmake_minimum_required(VERSION 2.8)
project( SafeCity )
find_package( OpenCV REQUIRED )
aux_source_directory(src SRC_LIST)
add_executable(SafeCity ${SRC_LIST})
include_directories(include )
link_directories(/home/charlie/workspace/safecity/lib)
add_definitions(-std=c++11)
add_definitions(-DDEBUG)
target_link_libraries( SafeCity ${OpenCV_LIBS} /home/charlie/workspace/safecity/lib/libjson.a crypto ssl)
